src/objects/TitleWorkTracker__c.object
<CustomObject>
    <fields>
        <fullName>completionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>landGridTract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Land Grid Tract</label>
        <referenceTo>LandGridTract__c</referenceTo>
        <relationshipLabel>Title Work Trackers</relationshipLabel>
        <relationshipName>titleTrackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, IMAGE(&quot;/logos/Standard/link/logo.svg&quot;, &quot;Link to &quot; + Name, 30, 30 ), &quot;_self&quot;)</formula>
        <label>View Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previousId__c</fullName>
        <description>Used for data migration from Old Title Work Job</description>
        <label>Previous ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectAOI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project AOI</label>
        <referenceTo>Project_AOI__c</referenceTo>
        <relationshipLabel>Title Work Trackers</relationshipLabel>
        <relationshipName>TitleWorkTrackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>srpOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SRP Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>titleWorkTrackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Title Work Tracker</label>
    <listViews>
        <fullName>Alamo_TitleWorkTracker</fullName>
        <filterScope>Queue</filterScope>
        <label>Alamo</label>
        <queue>Alamo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>landGridTract__c</columns>
        <columns>srpOwner__c</columns>
        <columns>projectAOI__c</columns>
        <columns>status__c</columns>
        <columns>completionDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>landGridTract__c</columns>
        <columns>projectAOI__c</columns>
        <columns>status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>srpOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>projectAOI__c</field>
            <operation>equals</operation>
            <value>North Martin</value>
        </filters>
        <label>All - In Progress</label>
    </listViews>
    <listViews>
        <fullName>Attorneys_TitleWorkTracker</fullName>
        <filterScope>Queue</filterScope>
        <label>Attorneys</label>
        <queue>Attorneys</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bragg_TitleWorkTracker</fullName>
        <filterScope>Queue</filterScope>
        <label>Bragg</label>
        <queue>Bragg</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Reno_TitleWorkTracker</fullName>
        <filterScope>Queue</filterScope>
        <label>Reno</label>
        <queue>Reno</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Stockton_TitleWorkTracker</fullName>
        <filterScope>Queue</filterScope>
        <label>Stockton</label>
        <queue>Stockton</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned_TitleWorkTracker</fullName>
        <filterScope>Queue</filterScope>
        <label>Unassigned</label>
        <queue>Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TWT-{0000000000}</displayFormat>
        <label>Title Work Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title Work Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RequireOwner</fullName>
        <active>false</active>
        <description>Require SRP Owner field to be completed.</description>
        <errorConditionFormula>ISBLANK( srpOwner__c )</errorConditionFormula>
        <errorMessage>You must select a SRP Owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Completion_Date</fullName>
        <active>true</active>
        <description>Require Completion Date when status is Completed</description>
        <errorConditionFormula>TEXT(status__c) == &apos;Complete&apos; &amp;&amp; ISBLANK(completionDate__c)</errorConditionFormula>
        <errorMessage>Please enter a Completion Date prior to changing status to Complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Start_Date</fullName>
        <active>true</active>
        <description>Require Start Date for any status other than Not Started</description>
        <errorConditionFormula>TEXT(status__c) != &apos;Not Started&apos; &amp;&amp; ISBLANK(startDate__c )</errorConditionFormula>
        <errorMessage>For status other than Not Started, Start Date is required.</errorMessage>
    </validationRules>
</CustomObject>